src/test/deca/context/valid/class/43-declVarValidInit2.deca
/* Description:
    teste la regle (3.16) (3.17) de la vérification contextuelles
    Déclaration de variables avec initialisation dans une methode

    Historique:
      cree le 21/01/2020
*/

class A {
  protected int a;
  int b;
  void methode1(int a,int b){   //chaque methode a son propre EnvironmentExp
    B c = new B(); // le type B est dans l'environment type
}
}
class B extends A{
  void methode1(int a, int b){ // une redifinition de la methode
    float c = 5;
    int d = 4;
    B e = new B();
    Object f = new Object();
    A g = new A();
    C h = new C();
  }

}
class C extends B{

}
